# sonar-alloweddependencies-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pom.xml
.github/workflows/: build.yml  e2e.yml
docs/adr/: 0001-add-python-dependency-rules.md  0002-add-maven-plugin-and-extension-allow-list-rules.md
docs/plans/: python-dependency-rules.md
src/it/scanner-fixtures/: README.md
src/it/scanner-fixtures/maven-extensions-file/: sonar-project.properties
src/it/scanner-fixtures/maven-flattened-pom/: .flattened-pom.xml  pom.xml  sonar-project.properties
src/it/scanner-fixtures/maven-pom/: pom.xml  sonar-project.properties
src/it/scanner-fixtures/npm-package/: package.json  sonar-project.properties
src/it/scanner-fixtures/python-pip/: app.py  dev-requirements.txt  dev-shared.txt  requirements-dev.txt  requirements-template.txt  requirements.txt  shared.txt  sonar-project.properties
src/it/scanner-fixtures/python-pyproject/: app.py  pyproject.toml  sonar-project.properties
src/it/scanner-fixtures/xml-non-pom/: catalog.xml  sonar-project.properties
src/it/sonarqube/: docker-compose.yaml  run-e2e.sh
src/test/resources/maven/: pom.xml
src/test/resources/maven/extensions/: pom.xml
src/test/resources/maven/invalid/: pom.xml
src/test/resources/maven/plugins/: pom.xml
src/test/resources/npm/: package.json
src/test/resources/npm/no-dependencies-block/: package.json
src/test/resources/python/invalid/: pyproject.toml
src/test/resources/python/pyproject/: pyproject.toml
src/test/resources/python/requirements/: constraints.txt  cyclic.txt  (+4 more)
(+60 files in other folders)
